outline of project

--- a/HackSNeOS.ipynb
+++ b/HackSNeOS.ipynb
@@ -21,7 +21,7 @@
    },
    "outputs": [],
    "source": [
-    "# function that takes a set of parameters, producing a lightcurve"
+    "# function that takes a set of parameters, producing a lightcurve mathematical function"
    ]
   },
   {
@@ -32,7 +32,7 @@
    },
    "outputs": [],
    "source": [
-    "# function that takes samples of a lightcurve given a sampling strategy"
+    "# function that takes evaluates lightcurve function given a sampling strategy"
    ]
   },
   {
@@ -98,7 +98,11 @@
    },
    "outputs": [],
    "source": [
-    "# "
+    "# choose a sampling strategy\n",
+    "# choose number of lightcurves to shift\n",
+    "# for each shifted lightcurve, evaluate at sampling locations (no measurement errors for now)\n",
+    "# for each shifted lightcurve, calculate variance of parameters, then sum them to get expected value of variance\n",
+    "# profit"
    ]
   }
  ],
