implemented mcmc fitting

--- a/HackSNeOS.ipynb
+++ b/HackSNeOS.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -108,48 +108,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(       errors: OrderedDict([('z', 0.016592357991751128), ('t0', 0.40221634128465666), ('x0', 3.8828219866563667e-07), ('x1', 0.3268445395734268), ('c', 0.03901362754474944)])\n",
-      "   parameters: array([  5.15176802e-01,   5.51004761e+04,   1.19637778e-05,\n",
-      "         4.66339458e-01,   1.93867870e-01])\n",
-      "      success: True\n",
-      "         ndof: 35\n",
-      "   covariance: array([[  2.75943971e-04,   6.16302834e-04,   1.71844580e-09,\n",
-      "         -1.20071588e-03,  -4.43216295e-04],\n",
-      "       [  6.16302834e-04,   1.61779025e-01,  -3.09649481e-08,\n",
-      "          5.08276405e-02,  -2.39659687e-04],\n",
-      "       [  1.71844580e-09,  -3.09649481e-08,   1.50763066e-13,\n",
-      "         -7.54696079e-08,  -1.01497179e-08],\n",
-      "       [ -1.20071588e-03,   5.08276405e-02,  -7.54696079e-08,\n",
-      "          1.06827353e-01,   3.33646678e-03],\n",
-      "       [ -4.43216295e-04,  -2.39659687e-04,  -1.01497179e-08,\n",
-      "          3.33646678e-03,   1.52206313e-03]])\n",
-      " vparam_names: ['z', 't0', 'x0', 'x1', 'c']\n",
-      "        chisq: 33.80533035050058\n",
-      "  param_names: ['z', 't0', 'x0', 'x1', 'c']\n",
-      "      message: 'Minimization exited successfully.'\n",
-      "        ncall: 132, <sncosmo.models.Model object at 0x110095f50>)\n"
+      "OrderedDict([('z', 0.016592357991751128), ('t0', 0.40221634128465666), ('x0', 3.8828219866563667e-07), ('x1', 0.3268445395734268), ('c', 0.03901362754474944)])\n",
+      "OrderedDict([('z', 0.028528956968022816), ('t0', 0.4329512467847883), ('x0', 4.948627633970424e-07), ('x1', 0.37238459388736289), ('c', 0.055541192298813567)])\n"
      ]
     }
    ],
    "source": [
-    "# function that fits lightcurves to samples, producing some set of parameters\n",
-    "# first try maximum likelihood method of sncosmo\n",
+    "# function that fits lightcurves to samples, producing some set of parameters and variances\n",
+    "# first try maximum likelihood method of sncosmo.fit_lc\n",
     "data = sncosmo.load_example_data()\n",
     "model = sncosmo.Model(source='salt2')\n",
     "res, fitted_model = sncosmo.fit_lc(data,model,['z', 't0', 'x0', 'x1', 'c'],bounds={'z':(0.3, 0.7)})\n",
-    "print(res,fitted_model)\n",
-    "# next try sampling method of sncosmo_lc_analysis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# function that calculates the variance of the fit parameters relative to the true parameters"
+    "print(res.errors)\n",
+    "# next try sampling method of sncosmo.mcmc_lc\n",
+    "res, fitted_model = sncosmo.mcmc_lc(data,model,['z', 't0', 'x0', 'x1', 'c'],bounds={'z':(0.3, 0.7)})\n",
+    "print(res.errors)"
    ]
   },
   {
