--- a/HackSNeOS.ipynb
+++ b/HackSNeOS.ipynb
@@ -2,15 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import os\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# setting up sncosmo\n",
+    "import sncosmo"
    ]
   },
   {
@@ -22,7 +35,6 @@
    "outputs": [],
    "source": [
     "# function that takes a set of parameters, producing a lightcurve mathematical function\n",
-    "import sncosmo\n",
     "model = sncosmo.Model(source='hsiao')\n",
     "model.set(z=0.5, t0=55000., amplitude=1.e-10)"
    ]
@@ -117,6 +129,7 @@
     "# function that fits lightcurves to samples, producing some set of parameters and variances\n",
     "# first try maximum likelihood method of sncosmo.fit_lc\n",
     "data = sncosmo.load_example_data()\n",
+    "\n",
     "model = sncosmo.Model(source='salt2')\n",
     "res, fitted_model = sncosmo.fit_lc(data,model,['z', 't0', 'x0', 'x1', 'c'],bounds={'z':(0.3, 0.7)})\n",
     "print(res.errors)\n",
@@ -133,7 +146,8 @@
    },
    "outputs": [],
    "source": [
-    "# function that bias of fit parameters relative to true parameters"
+    "# function that produces expected value of variances for many shifted lightcurves\n",
+    "# sncosmo_lc"
    ]
   },
   {
@@ -144,7 +158,7 @@
    },
    "outputs": [],
    "source": [
-    "# function that calculates expected value of variance and bias for a set of lightcurves"
+    "# function that calculates bias of fit parameters relative to true parameters"
    ]
   },
   {
@@ -155,7 +169,7 @@
    },
    "outputs": [],
    "source": [
-    "# choose a sampling strategy\n",
+    "# use LSST cadence\n",
     "# choose number of lightcurves to shift\n",
     "# for each shifted lightcurve, evaluate at sampling locations (no measurement errors for now)\n",
     "# for each shifted lightcurve, calculate variance of parameters, then sum them to get expected value of variance\n",
